--- a/base-prova/index.html
+++ b/base-prova/index.html
@@ -70,7 +70,7 @@
                         </h3>
                         <p>
                             Cum sociis natoque penatibus et magnis dis parturient montes,
-                            nascetur ridiculus mus. 
+                            nascetur ridiculus mus.
                             Cras justo odio, dapibus ac facilisis in, egestas
                             eget quam. Praesent commodo cursus magna risus varius.
                         </p>
@@ -97,13 +97,17 @@
 
 
                     <li>
+                        <div class="flex-container">
                         <a href="img"><img src="src/images/SVG (1).png" alt="pessoas"></a>
+                        </div>
                         <h3>Collect Ideas</h3>
                         <p>Etiam porta malesuada magna mollis euismod consectetur leo elit.</p>
                     </li>
 
                     <li>
+                         <div class="flex-container">
                         <a href="img2"><img src="src/images/SVG.png" alt="redondo"></a>
+                        </div>
                         <h3>
                             Data Analysis
                         </h3>
@@ -121,20 +125,15 @@
         <section class="final">
             <p>© 2023 Sandbox.All rights reserved.</p>
 
-            <ul>
-                <li>
-                    <a href="#"><img src="src/images/Nav → Link.png" alt="facebook"></a>
+            <div class="flex-container">
+
+                <a href="#"><img src="src/images/Nav → Link.png" alt="facebook"></a>
+                <a href="#"><img src="src/images/Nav → Link (1).png" alt="instagram"></a>
                 </li>
 
-                <li>
-                    <a href="#"><img src="src/images/Nav → Link (1).png" alt="instagram"></a>
-                </li>
+                <a href="#"><img src="src/images/Nav → Link (2).png" alt="youtube "></a>
 
-                <li>
-                    <a href="#"><img src="src/images/Nav → Link (2).png" alt="youtube "></a>
-                </li>
-            </ul>
-
+            </div>
         </section>
     </footer>
 
